--- a/src/client/components/input/index.scss
+++ b/src/client/components/input/index.scss
@@ -26,12 +26,12 @@
             line-height: 22px;
             background: $white;
             border: 1px solid $gray-300;
-            box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+            box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05);
             border-radius: 8px;
             
             &:focus {
                 border: 1px solid #D6BBFB;
-                box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #F4EBFF;
+                box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05), 0 0 0 4px #F4EBFF;
             }
             
             &:disabled {
@@ -47,20 +47,19 @@
 
         .ip-icon {
             position: absolute;
-            padding: 12px;
             width: 20px;
             height: 20px;
 
             &.prefix {
-                left: 0;
+                left: 10px;
             }
 
             &.suffix {
-                right: 0
+                right: 10px;
             }
 
             &.error-icon {
-                right: 0;
+                right: 10px;
             }
         }
 
