--- a/src/client/components/navigation/nav-item/index.scss
+++ b/src/client/components/navigation/nav-item/index.scss
@@ -4,10 +4,13 @@
 .nav-item {
   padding: 8px 12px;
   margin-bottom: 4px;
+  border-radius: 6px;
+  display: flex;
+  gap: 12px;
 
   .nav-item-icon {
-    float: left;
-    margin-right: 12px;
+    display: flex;
+    align-items: center;
   }
 
   .nav-item-label {
@@ -15,5 +18,21 @@
     font-size: $font-size-3;
     line-height: 24px;
     color: $gray-700;
+  }
+
+  &.primary-light {
+    &:hover {
+      background: #F9F5FF;
+      color: $primary-700;
+
+      .nav-item-label {
+        color: $primary-700;
+      }
+    }
+
+    &:focus {
+      box-shadow: 0 0 0 4px $primary-100;
+      outline: none;
+    }
   }
 }
