Import placement changed

--- a/src/client/pages/dashboard/side-bar/index.scss
+++ b/src/client/pages/dashboard/side-bar/index.scss
@@ -1,5 +1,5 @@
-@import '../../../styleguide/font-size.scss';
-@import '../../../styleguide/color-palette.scss';
+@import '../../../styleguide/font-size';
+@import '../../../styleguide/color-palette';
 
 .sidebar-container {
   width: 300px;
