--- a/src/client/components/input/index.scss
+++ b/src/client/components/input/index.scss
@@ -79,6 +79,7 @@
             input {
                 border: 1px solid $error-300;
                 box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05);
+                padding-right: 40px;
             
                 &:focus {
                     border: 1px solid $error-300;
