--- a/src/client/pages/dashboard/index.scss
+++ b/src/client/pages/dashboard/index.scss
@@ -6,10 +6,35 @@
   height: 100%;
   display: flex;
 
-    .page-content {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex: 1;
+  .page-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+  }
+
+  .sidebar-container {
+    width: 300px;
+    height: 100%;
+    border-right: 1px solid $gray-200;
+    display: flex;
+    flex-direction: column;
+
+    .sidebar-header {
+      color: $gray-900;
+      font-size: $font-size-5;
+      font-weight: 500;
+      padding: 24px;
+      border-bottom: 1px solid $gray-200;
+      height: 75px;
     }
+
+    .sidebar {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 24px 16px;
+    }
+  }
 }
